# HelpDesk

./: .gitignore  CMakeLists.txt  README.md  main.c
src/controls/: controls_holder.c  controls_holder.h  teclas.c  teclas.h
src/core/: atendimento.c  atendimento.h  bst_estoque.c  bst_estoque.h  bst_tecnico.c  bst_tecnico.h  chamado.c  chamado.h  fila_normal.c  fila_normal.h  fila_preferencial.c  fila_preferencial.h  login.c  login.h
src/data/: usuarios.txt
src/models/: fifo.c  fifo.h  heap.c  heap.h
src/view/: acoes.h  color.h  interface.c  interface.h  looping.c  looping.h  menu.c  menu.h  widgets.c  widgets.h
